
Mon Feb 19 08:25:14 CET 2001

	- Synced gram.y and preproc.y.

Mon Feb 26 15:22:04 CET 2001

	- Fixed misplaced variables FoundInto and QueryIsRule.

Thu Mar 29 10:23:05 CEST 2001

	- Applied bug fix in ecpgtype.h by Adriaan Joubert.

Mon Apr  2 10:16:10 CEST 2001

	- Synced scan.l and pgc.l.

Thu Apr  5 10:11:35 CEST 2001

	- Fixed long long problem.
	- Set ecpg version to 2.8.0. 
	- Set library version to 3.2.0.

Fri Jun  1 08:13:25 CEST 2001

	- Synced preproc.y with gram.y.
	- Synced pgc.l with scan.l.
	- Synced keyword.c.

Wed Jun 13 14:39:12 CEST 2001

	- Synced preproc.y with gram.y.  
	- Applied bug fix by John Summerfield.

Son Aug 19 11:04:39 CEST 2001

	- Synced preproc.y with gram.y. 
	- Include some patches by Christof Petig <christof.petig@wtal.de>.

Wed Sep 19 15:57:49 CEST 2001

	- Synced preproc.y with gram.y. 
	- Synced pgc.l with scan.l.
        - Synced keyword.c.
	- Include the remaining patches by Christof Petig <christof.petig@wtal.de>.

Tue Sep 25 20:10:03 CEST 2001

	- Synced preproc.y with gram.y.
	- Changed locale handling.

Mon Oct  1 13:49:40 CEST 2001

	- Fixed truncate bug.
	- Added patch by Christof Petig <christof.petig@wtal.de> to clean up
	  ecpglib.

TUe Oct  2 16:09:26 CEST 2001

	- Re-added Tom's patch fixing my setlocale patch. I accidently
	  deleted it.

Fri Oct  5 08:37:01 CEST 2001

	- Fixed yet another typo in preproc.y.

Fri Oct  5 19:33:46 CEST 2001

	- Make sure every call to ECPGraise is logged.

Mon Oct  8 10:10:23 CEST 2001

	- Fix include file so library is binary compatible again.

Sun Oct 14 14:07:59 CEST 2001

	- Fixed GRANT statement.
	- Synced preproc.y with gram.y.

Thu Oct 18 12:57:04 CEST 2001

	- Added patch by Lee Kindness <lkindness@csl.co.uk> fixing several
	  bugs.

Fri Oct 19 16:32:06 CEST 2001

	- Removed "not yet fully implemented" warnig for nullif.

Sun Oct 21 14:19:42 CEST 2001

	- Synced preproc.y with gram.y.
	- Set ecpg version to 2.9.0.
        - Set library version to 3.3.0.