@@ -1,26 +1,0 @@
-The complete structure definition has to be listed inside the declare
-section of the structure variable for ecpg to be able to understand it.
-
-sqlwarn[6] should be 'W' if the PRECISION or SCALE value specified in a SET
-DESCRIPTOR statement will be ignored.
-
-The error handling has to be improved by adding additional error-rules to
-the parser.
-
-it would be nice to be able to use :var[:index] or :var[<integer>] as
-cvariable for an array var
-
-What happens to the output variable during read if there was an
-indicator-error? 
-
-Add a semantic check level, e.g. check if a table really exists.
-
-It would be nice if there was a alternative library using SPI functions
-instead of libpq so we can write backend functions using ecpg.
-
-remove space_or_nl and line_end from pgc.l
-
-nested C comments do not work
-
-Missing features:
- - SQLSTATE
